feat: finish Congrat page responsive

--- a/src/Products/Congrats/Congrats.css
+++ b/src/Products/Congrats/Congrats.css
@@ -40,4 +40,103 @@
   font-size: 17px;
   font-weight: 400;
   text-decoration: none;
+}
+
+@media (max-width: 1400px) {
+  .congrats-container .congrats-content .tick {
+    width: 90px;
+    height: 90px;
+  }
+  .congrats-container .congrats-content .congrats-title {
+    font-size: 48px;
+  }
+  .congrats-container .congrats-content .congrats-para {
+    font-size: 16px;
+  }
+  .congrats-container .congrats-content .congrats-btn {
+    width: 200px;
+    height: 40px;
+    font-size: 16px;
+  }
+}
+@media (max-width: 1200px) {
+  .congrats-container {
+    margin-top: 150px;
+  }
+  .congrats-container .congrats-content .tick {
+    width: 80px;
+    height: 80px;
+  }
+  .congrats-container .congrats-content .congrats-title {
+    font-size: 42px;
+  }
+  .congrats-container .congrats-content .congrats-para {
+    font-size: 15px;
+  }
+  .congrats-container .congrats-content .congrats-btn {
+    width: 180px;
+    height: 38px;
+    font-size: 15px;
+  }
+}
+@media (max-width: 1000px) {
+  .congrats-container {
+    margin-top: 120px;
+  }
+  .congrats-container .congrats-content .tick {
+    width: 70px;
+    height: 70px;
+  }
+  .congrats-container .congrats-content .congrats-title {
+    font-size: 36px;
+  }
+  .congrats-container .congrats-content .congrats-para {
+    font-size: 14px;
+  }
+  .congrats-container .congrats-content .congrats-btn {
+    width: 160px;
+    height: 36px;
+    font-size: 14px;
+  }
+}
+@media (max-width: 700px) {
+  .congrats-container {
+    margin-top: 100px;
+  }
+  .congrats-container .congrats-content .tick {
+    width: 60px;
+    height: 60px;
+  }
+  .congrats-container .congrats-content .congrats-title {
+    font-size: 30px;
+  }
+  .congrats-container .congrats-content .congrats-para {
+    font-size: 13px;
+  }
+  .congrats-container .congrats-content .congrats-btn {
+    width: 140px;
+    height: 34px;
+    font-size: 13px;
+  }
+}
+@media (max-width: 540px) {
+  .congrats-container {
+    margin-top: 80px;
+  }
+  .congrats-container .congrats-content .tick {
+    width: 50px;
+    height: 50px;
+  }
+  .congrats-container .congrats-content .congrats-title {
+    font-size: 26px;
+  }
+  .congrats-container .congrats-content .congrats-para {
+    font-size: 12px;
+    margin-bottom: 60px;
+  }
+  .congrats-container .congrats-content .congrats-btn {
+    width: 130px;
+    height: 32px;
+    font-size: 12px;
+  }
 }/*# sourceMappingURL=Congrats.css.map */
